--- a/1.init/compose.yaml
+++ b/1.init/compose.yaml
@@ -1,7 +1,7 @@
 services:
   mongodb1:
     container_name: mongodb1
-    image: dh-mirror.gitverse.ru/mongo:latest
+    image: kazhem/pymongo_api:1.0.0
     volumes:
       - mongodb1_data_container:/data/db
 
