--- a/2.mongo-sharing/compose.yaml
+++ b/2.mongo-sharing/compose.yaml
@@ -14,7 +14,7 @@ services:
       - app-network
 
   config-srv:
-    image: kazhem/pymongo_api:1.0.0
+    image: dh-mirror.gitverse.ru/mongo:latest
     container_name: config-srv
     restart: always
     ports:
@@ -34,7 +34,7 @@ services:
       ]
 
   mongos-router:
-    image: kazhem/pymongo_api:1.0.0
+    image: dh-mirror.gitverse.ru/mongo:latest
     container_name: mongos-router
     restart: always
     ports:
@@ -52,7 +52,7 @@ services:
       ]
 
   shard-1:
-    image: kazhem/pymongo_api:1.0.0
+    image: dh-mirror.gitverse.ru/mongo:latest
     container_name: shard-1
     restart: always
     ports:
@@ -72,7 +72,7 @@ services:
       ]
 
   shard-2:
-    image: kazhem/pymongo_api:1.0.0
+    image: dh-mirror.gitverse.ru/mongo:latest
     container_name: shard-2
     restart: always
     ports:
