--- a/3.mongo-sharing-repl/compose.yaml
+++ b/3.mongo-sharing-repl/compose.yaml
@@ -14,7 +14,7 @@ services:
       - app-network
 
   config-srv:
-    image: kazhem/pymongo_api:1.0.0
+    image: dh-mirror.gitverse.ru/mongo:latest
     container_name: config-srv
     restart: always
     ports:
@@ -34,7 +34,7 @@ services:
       ]
 
   mongos-router:
-    image: kazhem/pymongo_api:1.0.0
+    image: dh-mirror.gitverse.ru/mongo:latest
     container_name: mongos-router
     restart: always
     ports:
@@ -53,7 +53,7 @@ services:
 
   # Шард 1 с репликами
   shard-1-primary:
-    image: kazhem/pymongo_api:1.0.0
+    image: dh-mirror.gitverse.ru/mongo:latest
     container_name: shard-1-primary
     restart: always
     ports:
@@ -73,7 +73,7 @@ services:
       ]
 
   shard-1-replica-1:
-    image: kazhem/pymongo_api:1.0.0
+    image: dh-mirror.gitverse.ru/mongo:latest
     container_name: shard-1-replica-1
     restart: always
     ports:
@@ -95,7 +95,7 @@ services:
       - shard-1-primary
 
   shard-1-replica-2:
-    image: kazhem/pymongo_api:1.0.0
+    image: dh-mirror.gitverse.ru/mongo:latest
     container_name: shard-1-replica-2
     restart: always
     ports:
@@ -118,7 +118,7 @@ services:
 
   # Шард 2 с репликами
   shard-2-primary:
-    image: kazhem/pymongo_api:1.0.0
+    image: dh-mirror.gitverse.ru/mongo:latest
     container_name: shard-2-primary
     restart: always
     ports:
@@ -138,7 +138,7 @@ services:
       ]
 
   shard-2-replica-1:
-    image: kazhem/pymongo_api:1.0.0
+    image: dh-mirror.gitverse.ru/mongo:latest
     container_name: shard-2-replica-1
     restart: always
     ports:
@@ -160,7 +160,7 @@ services:
       - shard-2-primary
 
   shard-2-replica-2:
-    image: kazhem/pymongo_api:1.0.0
+    image: dh-mirror.gitverse.ru/mongo:latest
     container_name: shard-2-replica-2
     restart: always
     ports:
